test_suite/ERROR_index_on_not_arr.java
// -unused -no-style
class Main {
  public static void main(String[] a) {}
}

class A {
  int a;

  public int test(int b) { return b[2]; }

  public int foo() { return a[2]; }
}
